--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,9 +1,42 @@
 @import './mixins';
 
 // Here you put all global css rules.
+html {
+  height: 100%;
+}
 
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+}
+#overlay {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#overlay.hidden {
+  display: none;
+}
+#root {
+  height: 100%;
+  // background: white;
+  // padding: 20px;
+  box-sizing: border-box;
   // font-family: sans-serif;
+}
+#overlay ~ #root {
+  transition: 300ms filter ease-in-out, 300ms opacity ease-out;
+  filter: blur(0) saturate(1);
+  opacity: 1;
+}
+#overlay:not(.hidden) ~ #root {
+  filter: blur(5px) saturate(0.1);
+  opacity: 0.9;
 }
