Mejoras de estilo en el login y cambio de mensaje en los contenedores de fondo para que no sea el mismo formulario de login

--- a/src/features/common/PageLogin.less
+++ b/src/features/common/PageLogin.less
@@ -5,7 +5,7 @@
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   background-color: #fff;
-  height: 450px;
+  height: 420px;
   width: 350px;
   margin-top: 20px;
   -webkit-box-shadow: 0px 0px 20px -2px rgba(0,0,0,0.75);
@@ -13,7 +13,7 @@
   box-shadow: 0px 0px 20px -2px rgba(0,0,0,0.75);
 }
 .top {
-  background-color: #1976d2;
+  background-color: #6097F0;
   height: 150px;
   width: 350px;
   position: absolute;
@@ -38,71 +38,16 @@
   text-align: left;
   padding-top: 30px;
 }
-.login-tooltip {
-  color: #999;
-  font-size: 13px;
-  padding-top: 16px;
-  padding-bottom: 8px;
+.MuiButton-root {
+  background-color: #1976d2 !important;
+  color: #FFF !important;
 }
-.email {
-  border-style: solid;
-  border-top-width: 0;
-  border-left-width: 0;
-  border-right-width: 0;
-  height: 24px;
-  font-size: 18px;
-  border-bottom-color: #1976d2;
-  width: 290px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  transition: all 0.2s ease-in-out;
+.MuiFormControl-root {
+  margin-bottom: 20px !important;
+  background: #fdfdfd !important;
+  width: 100%;
 }
-.email:hover {
-  border-bottom-color: #1976d2;
-  transition: all 0.2s ease-in-out;
-}
-.email:focus {
-  border-bottom-color: #1976d2;
-  transition: all 0.2s ease-in-out;
-  outline: none;
-}
-.more {
-  color: #1976d2;
-  text-transform: uppercase;
-  font-size: 16px;
-  padding-top: 45px;
-  display: inline-block;
-}
-.next {
-  background-color: #1976d2;
-  width: 70px;
-  color: #fff;
-  display: inline-block;
-  padding-top: 7px;
-  padding-bottom: 7px;
-  text-transform: uppercase;
-  text-align: center;
-  margin-left: 100px;
-  border-radius: 2px;
-}
-.logo {
-  position: absolute;
-  bottom: 5px;
-  text-align: center;
-}
-.google {
-  width: 70px;
-  padding-bottom: 10px;
-  margin-left: 100px;
-}
-a {
-  text-decoration: none;
-}
-.notif {
-  width: calc(100% - 60px);
-  height: 50px;
-  color: #666;
-  font-size: 12px;
-  margin-top: 100px;
-  text-align: center;
+
+.MuiInputLabel-root.Mui-focused {
+  border-bottom-color: #6097F0 !important;
 }
