--- a/src/features/dashboard/style.less
+++ b/src/features/dashboard/style.less
@@ -1,1 +1,9 @@
 @import '../../styles/mixins';
+
+.MuiTableRow-root.Mui-selected, .MuiTableRow-root.Mui-selected:hover {
+  background-color: rgb(216, 224, 236);
+}
+
+.MuiCheckbox-colorPrimary.Mui-checked {
+  color: #4b77bd;
+}
