--- a/src/features/common/PageLogin.less
+++ b/src/features/common/PageLogin.less
@@ -23,9 +23,17 @@
 .title {
   color: #fff;
   position: absolute;
-  bottom: 10px;
+  bottom: 34px;
   left: 30px;
-  font-size: 20px;
+  font-size: 22px;
+  font-weight: 300;
+}
+.detail {
+  color: #fff;
+  position: absolute;
+  bottom: 0px;
+  left: 30px;
+  font-size: 12px;
   font-weight: 300;
 }
 .body {
@@ -50,4 +58,12 @@
 
 .MuiInputLabel-root.Mui-focused {
   border-bottom-color: #6097F0 !important;
+}
+
+.error-field-required {
+  color: red !important;
+}
+
+.Mui-disabled {
+  background-color: lightgrey !important;
 }
