--- a/src/features/dashboard/style.less
+++ b/src/features/dashboard/style.less
@@ -1,1 +1,23 @@
 @import '../../styles/mixins';
+
+.breadcrumb-container {
+  position: absolute;
+  left: 80px;
+  margin-top: -12px;
+
+  h2 {
+    font-size: 20px;
+  }
+
+  .breadcrumb {
+    margin-top: -8px;
+  }
+
+  .breadcrumb-item {
+    color: #2e4f85;
+  }
+
+  .breadcrumb-item.active {
+    font-weight: bold;
+  }
+}
