--- a/src/features/dashboard/style.less
+++ b/src/features/dashboard/style.less
@@ -1,11 +1,11 @@
 @import '../../styles/mixins';
 
 .MuiTableRow-root.Mui-selected, .MuiTableRow-root.Mui-selected:hover {
-  background-color: rgb(216, 224, 236);
+  background-color: rgb(216, 224, 236) !important;
 }
 
 .MuiCheckbox-colorPrimary.Mui-checked {
-  color: #4b77bd;
+  color: #4b77bd !important;
 }
 
 .breadcrumb-container {
