Mejoras en navegación dinámica de subrutas

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -40,3 +40,23 @@ body {
   filter: blur(5px) saturate(0.1);
   opacity: 0.9;
 }
+.navbar-default .nav > li > a:hover, .navbar-default .nav > li > a:focus {
+  background-color: #4B77BD !important;
+  // font-weight: bold;
+}
+ul.nav-second-level > li > a {
+  color: #d0d6e1;
+}
+ul.nav-second-level > li.active {
+  background-color: #4B77BD !important;
+}
+
+ul.nav-second-level {
+  background-color: #4B77BD !important;
+}
+// .nav > li > a {
+//   color: #a7b1c2;
+//   font-weight: 600;
+//   padding: 14px 20px 14px 25px;
+//   display: block;
+// }
