--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -96,3 +96,11 @@ ul.nav-second-level {
 .siCobro {
   background-color: #FFF;
 }
+
+.userListItem {
+  font-size: 14px !important;
+}
+
+.to-the-right {
+  float: right !important;
+}
