vista de clientes

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -104,3 +104,13 @@ ul.nav-second-level {
 .to-the-right {
   float: right !important;
 }
+
+.titulo-nombre {
+  font-size: 20px;
+}
+
+.titulo-panel {
+  font-weight: bolder;
+  margin: 15px 0 15px  !important;
+  font-size: 16px;
+}
