--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -114,3 +114,9 @@ ul.nav-second-level {
   margin: 15px 0 15px  !important;
   font-size: 16px;
 }
+
+.lista-poliza {
+  min-height: 100% !important;
+  max-height: 68vh;
+  overflow-y: scroll;
+}
