--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -116,7 +116,7 @@ ul.nav-second-level {
 }
 
 .lista-poliza {
-  min-height: 100% !important;
+  min-height: 68vh;
   max-height: 68vh;
   overflow-y: scroll;
 }
