--- a/src/features/dashboard/style.less
+++ b/src/features/dashboard/style.less
@@ -1,4 +1,5 @@
 @import '../../styles/mixins';
+@import './print-style.less';
 
 .MuiTableRow-root.Mui-selected, .MuiTableRow-root.Mui-selected:hover {
   background-color: rgb(216, 224, 236) !important;
@@ -104,4 +105,49 @@ li a .fa {
 .ibox-title {
   background: #6097ef !important;
   color: #FFF;
+}
+
+#page-wrapper {
+  width: 100% !important;
+}
+
+.show-print-mode {
+  display: none;
+}
+.hide-print-mode {
+  display: show;
+}
+
+.page-heading {
+  background: #ebf0f8;
+
+  h2 {
+    color: #2e4f85;
+    font-weight: 600;
+    height: 26px;
+  }
+
+  i {
+    padding-top: 12px;
+  }
+}
+
+.page-heading-2 {
+  background: #fefefe;
+  padding-top: 5px;
+  padding-bottom: 10px;
+
+  h2 {
+    color: #2e4f85;
+    font-weight: 600;
+    height: 26px;
+  }
+
+  i {
+    padding-top: 12px;
+  }
+}
+
+.icon-button {
+  font-size: 16px;
 }
