--- a/src/features/dashboard/style.less
+++ b/src/features/dashboard/style.less
@@ -107,9 +107,9 @@ li a .fa {
   color: #FFF;
 }
 
-#page-wrapper {
-  width: 100% !important;
-}
+// #page-wrapper {
+//   width: 100% !important;
+// }
 
 .show-print-mode {
   display: none;
