--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -120,3 +120,25 @@ ul.nav-second-level {
   max-height: 68vh;
   overflow-y: scroll;
 }
+
+.dashboard-panel {
+  min-height: 15vh !important;
+  max-height: 15vh !important;
+  overflow-y: scroll;
+}
+
+.dashboard-panel-alt {
+  min-height: 15.6vh !important;
+  max-height: 15.6vh !important;
+  overflow-y: scroll;
+}
+
+.detallePoliza {
+  
+  color: #4B77BD !important;
+}
+
+.rbt-input {
+  border: 0;
+  border-bottom: #4B77BD 1px solid;
+}
