--- a/src/features/dashboard/style.less
+++ b/src/features/dashboard/style.less
@@ -155,3 +155,7 @@ li a .fa {
 .MuiOutlinedInput-input {
   padding: 6px 6px !important;
 }
+
+.MuiExpansionPanelSummary-root.Mui-expanded {
+  background-color: #cdd8eb;
+}
