cambio url API, estilos dashboard

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -140,7 +140,14 @@ ul.nav-second-level {
 
 .rbt-input {
   border: 0;
-  border-bottom: #4B77BD 1px solid;
+  border-bottom: rgba(0, 0, 0, 0.3) 1px solid;
+  width: 100%;
+}
+
+.rbt-input:hover {
+  border: 0;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.87);
+  width: 100%;
 }
 
 .alert-pad {
