correccion de estilo en el dashboard

--- a/src/features/dashboard/style.less
+++ b/src/features/dashboard/style.less
@@ -159,3 +159,7 @@ li a .fa {
 .MuiExpansionPanelSummary-root.Mui-expanded {
   background-color: #cdd8eb;
 }
+
+.inicioDashboard {
+  margin-top: 12px;
+}
