--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -119,18 +119,42 @@ ul.nav-second-level {
   min-height: 68vh;
   max-height: 68vh;
   overflow-y: scroll;
+  margin-top: 0.6rem;
 }
 
 .dashboard-panel {
   min-height: 15vh !important;
   max-height: 15vh !important;
-  overflow-y: scroll;
+  overflow-y: auto;
+  margin-top: 0.5rem;
+
+  div.MuiPaper-root {
+    margin: 0.5rem 0.5rem;
+    height: 56px;
+    align-items: center;
+  }
+
+  div.MuiAlert-filledInfo {
+    background: #5281ae;
+  }
 }
 
 .dashboard-panel-alt {
   min-height: 15.6vh !important;
   max-height: 15.6vh !important;
-  overflow-y: scroll;
+  overflow-y: auto;
+  margin-top: 0.52rem;
+  padding-top: 3px;
+
+  div.MuiPaper-root {
+    margin: 0.5rem 0.5rem;
+    height: 56px;
+    align-items: center;
+  }
+
+  div.MuiAlert-filledInfo {
+    background: #5281ae;
+  }
 }
 
 .detallePoliza {
@@ -152,4 +176,34 @@ ul.nav-second-level {
 
 .alert-pad {
   margin-top: 10px;
+}
+
+.panel-body-alt {
+  span {
+    text-align: center;
+    width: 100%;
+    display: inherit;
+    margin-bottom: 0.8rem;
+  }
+  i {
+    font-size: 48px;
+  }
+}
+
+.panel-body-alt-2 {
+  button {
+    min-width: unset;
+    width: 100%;
+    height: 36px;
+    align-items: center;
+  }
+  span {
+    text-align: center;
+    width: 100%;
+    display: inherit;
+  }
+  .titulo-panel {
+    text-align: start;
+    display: unset;
+  }
 }
