Se quita el scroll de listado clientes en pantalla clientes

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -118,7 +118,7 @@ ul.nav-second-level {
 .lista-poliza {
   min-height: 68vh;
   max-height: 68vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   margin-top: 0.6rem;
 }
 
