avances de mejora

--- a/src/features/dashboard/style.less
+++ b/src/features/dashboard/style.less
@@ -163,3 +163,28 @@ li a .fa {
 .inicioDashboard {
   margin-top: 12px;
 }
+
+.rbt-menu {
+  max-height: 310px !important;
+}
+
+a.dropdown-item {
+  padding: .5rem 1.5rem;
+
+  mark.rbt-highlight-text {
+    margin: -0.5rem -1.3rem;
+    padding: 0.5rem 1.5rem;
+    display: block;
+    background: #eaeced;
+  }
+}
+
+.inicioDashboard {
+  .panel-default {
+    height: 300px;
+  }
+  .panel-default-alt {
+    overflow-y: auto;
+    border-color: #e7eaec;
+  }
+}
