Avances mejora clientes

--- a/src/features/dashboard/style.less
+++ b/src/features/dashboard/style.less
@@ -95,7 +95,7 @@ li a .fa {
 }
 
 .panel-heading {
-  background-color: #dde4f0 !important;
+  background-color: #e3e7ee !important;
 }
 
 .text-a-r {
@@ -157,7 +157,8 @@ li a .fa {
 }
 
 .MuiExpansionPanelSummary-root.Mui-expanded {
-  background-color: #cdd8eb;
+  background-color: #e3e7ee;
+  height: 40px;
 }
 
 .inicioDashboard {
@@ -193,4 +194,31 @@ a.dropdown-item {
   border-bottom: solid 2px #555 !important;
   font-size: larger !important;
   text-transform: uppercase !important;
+}
+.filtro-cliente-container {
+  display: block;
+  position: relative;
+  background: white;
+  min-height: 100%;
+  overflow-y: auto;
+  margin-right: 0px !important;
+}
+
+.tag-list {
+  max-height: 104px;
+  overflow-y: auto;
+  display: inline-block;
+  margin-bottom: 0px;
+  
+  a {
+    font-size: 11px !important;
+  }
+
+  a > i {
+    font-size: 12px !important;
+  }
+
+  a > i.fa.fa-check-circle {
+    color: green;
+  }
 }
