--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -116,8 +116,8 @@ ul.nav-second-level {
 }
 
 .lista-poliza {
-  min-height: 68vh;
-  max-height: 68vh;
+  // min-height: 82vh;
+  max-height: 74vh;
   overflow-y: auto;
   margin-top: 0.6rem;
 }
