Avances mejora reportes

--- a/src/features/dashboard/style.less
+++ b/src/features/dashboard/style.less
@@ -188,3 +188,9 @@ a.dropdown-item {
     border-color: #e7eaec;
   }
 }
+
+.rpt-group-1-title {
+  border-bottom: solid 2px #555 !important;
+  font-size: larger !important;
+  text-transform: uppercase !important;
+}
