Finalización de actualizacion de gadgets, salud, propiedades y actividades

--- a/src/features/dashboard/style.less
+++ b/src/features/dashboard/style.less
@@ -212,6 +212,10 @@ a.dropdown-item {
   
   a {
     font-size: 11px !important;
+
+    &:hover {
+      background: #fdfdfd;
+    }
   }
 
   a > i {
