--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -272,3 +272,31 @@ ul.nav-second-level {
 #wrapper {
   overflow-x: unset;
 }
+
+input[type="date"] {
+  position: relative;
+  padding: 4px 0px 8px 0px;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  color: transparent;
+  background: none;
+  margin: 0 0 auto;
+  padding: 0 0;
+  z-index: 1;
+}
+
+input[type="date"]:before {
+  color: transparent;
+  background: none;
+  display: block;
+  font-family: 'FontAwesome';
+  content: '\f073';
+  /* This is the calendar icon in FontAwesome */
+  width: 15px;
+  height: 20px;
+  position: absolute;
+  // top: 12px;
+  right: 6px;
+  color: #999;
+}
