Finish Feature-CorreccionesVarias

--- a/src/features/dashboard/style.less
+++ b/src/features/dashboard/style.less
@@ -173,9 +173,9 @@ a.dropdown-item {
   padding: .5rem 1.5rem;
 
   mark.rbt-highlight-text {
-    margin: -0.5rem -1.3rem;
-    padding: 0.5rem 1.5rem;
-    display: block;
+    // margin: -0.5rem -1.3rem;
+    // padding: 0.5rem 1.5rem;
+    // display: block;
     background: #eaeced;
   }
 }
@@ -225,4 +225,8 @@ a.dropdown-item {
   a > i.fa.fa-check-circle {
     color: green;
   }
+}
+
+.ibox-heading h3 {
+  font-size: 20px !important;
 }
