--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -274,6 +274,7 @@ ul.nav-second-level {
 }
 
 input[type="date"] {
+  -moz-appearance:initial;
   position: relative;
   padding: 4px 0px 8px 0px;
 }
