--- a/src/features/dashboard/style.less
+++ b/src/features/dashboard/style.less
@@ -1,5 +1,6 @@
 @import '../../styles/mixins';
 @import './print-style.less';
+@import './chat-style.less';
 
 .MuiTableRow-root.Mui-selected, .MuiTableRow-root.Mui-selected:hover {
   background-color: rgb(216, 224, 236) !important;
